--- a/Diseño.html
+++ b/Diseño.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<title>Calculadora</title>
+<title>Calculadora </title>
 </head>
 <body bgcolor= "#FFA07A">
 <div align="center">
-<h1>Operaciones</h1>
+<h1>Calculadora Online</h1> //Suena mejor, no se que me dices...
 </div>
 
 <div align="center">
