Revert "Le agregue color al titulo"
This reverts commit fb4a5eff7ec829c4f67ee3ad81704a005b63f3b8.

--- a/Diseño.html
+++ b/Diseño.html
@@ -1,13 +1,11 @@
 <html>
 <head>
-<title> Calculadora </title>
+<title>Calculadora </title>
 </head>
 <body bgcolor= "#FFA07A">
-    <div align="center">
-        <h1>
-            <font color="#F5F1F1"> Calculadora Online </font>
-        </h1>
-    </div>
+<div align="center">
+<h1>Calculadora Online</h1> //Suena mejor, no se que me dices...
+</div>
 
 <div align="center">
 <form method="post" action="operaciones.php">
